paper: more work on TYPES

--- a/paper/types-2022-postproceedings/types-2022-postproceedings.bib
+++ b/paper/types-2022-postproceedings/types-2022-postproceedings.bib
@@ -28,3 +28,186 @@
   note = {Accessed November $7^\mathrm{th}$ 2022},
   year = {2022}
 }
+
+@article{10.1145/2490301.2451167, author = {Madhavapeddy, Anil and Mortier, Richard and Rotsos, Charalampos and Scott, David and Singh, Balraj and Gazagnaire, Thomas and Smith, Steven and Hand, Steven and Crowcroft, Jon}, title = {Unikernels: Library Operating Systems for the Cloud}, year = {2013}, issue_date = {March 2013}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, volume = {41}, number = {1}, issn = {0163-5964}, url = {https://doi.org/10.1145/2490301.2451167}, doi = {10.1145/2490301.2451167}, abstract = {We present unikernels, a new approach to deploying cloud services via applications written in high-level source code. Unikernels are single-purpose appliances that are compile-time specialised into standalone kernels, and sealed against modification when deployed to a cloud platform. In return they offer significant reduction in image sizes, improved efficiency and security, and should reduce operational costs. Our Mirage prototype compiles OCaml code into unikernels that run on commodity clouds and offer an order of magnitude reduction in code size without significant performance penalty. The architecture combines static type-safety with a single address-space layout that can be made immutable via a hypervisor extension. Mirage contributes a suite of type-safe protocol libraries, and our results demonstrate that the hypervisor is a platform that overcomes the hardware compatibility issues that have made past library operating systems impractical to deploy in the real-world.}, journal = {SIGARCH Comput. Archit. News}, month = {mar}, pages = {461–472}, numpages = {12}, keywords = {hypervisor, microkernel, functional programming} }
+ 
+ 
+@inproceedings{10.1145/2451116.2451167, author = {Madhavapeddy, Anil and Mortier, Richard and Rotsos, Charalampos and Scott, David and Singh, Balraj and Gazagnaire, Thomas and Smith, Steven and Hand, Steven and Crowcroft, Jon}, title = {Unikernels: Library Operating Systems for the Cloud}, year = {2013}, isbn = {9781450318709}, publisher = {Association for Computing Machinery}, address = {New York, NY, USA}, url = {https://doi.org/10.1145/2451116.2451167}, doi = {10.1145/2451116.2451167}, abstract = {We present unikernels, a new approach to deploying cloud services via applications written in high-level source code. Unikernels are single-purpose appliances that are compile-time specialised into standalone kernels, and sealed against modification when deployed to a cloud platform. In return they offer significant reduction in image sizes, improved efficiency and security, and should reduce operational costs. Our Mirage prototype compiles OCaml code into unikernels that run on commodity clouds and offer an order of magnitude reduction in code size without significant performance penalty. The architecture combines static type-safety with a single address-space layout that can be made immutable via a hypervisor extension. Mirage contributes a suite of type-safe protocol libraries, and our results demonstrate that the hypervisor is a platform that overcomes the hardware compatibility issues that have made past library operating systems impractical to deploy in the real-world.}, booktitle = {Proceedings of the Eighteenth International Conference on Architectural Support for Programming Languages and Operating Systems}, pages = {461–472}, numpages = {12}, keywords = {microkernel, functional programming, hypervisor}, location = {Houston, Texas, USA}, series = {ASPLOS '13} }
+
+@book{DBLP:books/sp/Gordon79,
+  author    = {Michael J. C. Gordon and
+               Robin Milner and
+               Christopher P. Wadsworth},
+  title     = {Edinburgh {LCF}},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {78},
+  publisher = {Springer},
+  year      = {1979},
+  url       = {https://doi.org/10.1007/3-540-09724-4},
+  doi       = {10.1007/3-540-09724-4},
+  isbn      = {3-540-09724-4},
+  timestamp = {Tue, 14 May 2019 10:00:35 +0200},
+  biburl    = {https://dblp.org/rec/books/sp/Gordon79.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/tphol/Harrison09a,
+  author    = {John Harrison},
+  editor    = {Stefan Berghofer and
+               Tobias Nipkow and
+               Christian Urban and
+               Makarius Wenzel},
+  title     = {{HOL} Light: An Overview},
+  booktitle = {Theorem Proving in Higher Order Logics, 22nd International Conference,
+               TPHOLs 2009, Munich, Germany, August 17-20, 2009. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5674},
+  pages     = {60--66},
+  publisher = {Springer},
+  year      = {2009},
+  url       = {https://doi.org/10.1007/978-3-642-03359-9\_4},
+  doi       = {10.1007/978-3-642-03359-9\_4},
+  timestamp = {Thu, 05 Sep 2019 14:51:32 +0200},
+  biburl    = {https://dblp.org/rec/conf/tphol/Harrison09a.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/tphol/SlindN08,
+  author    = {Konrad Slind and
+               Michael Norrish},
+  editor    = {Otmane A{\"{\i}}t Mohamed and
+               C{\'{e}}sar A. Mu{\~{n}}oz and
+               Sofi{\`{e}}ne Tahar},
+  title     = {A Brief Overview of {HOL4}},
+  booktitle = {Theorem Proving in Higher Order Logics, 21st International Conference,
+               TPHOLs 2008, Montreal, Canada, August 18-21, 2008. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {5170},
+  pages     = {28--32},
+  publisher = {Springer},
+  year      = {2008},
+  url       = {https://doi.org/10.1007/978-3-540-71067-7\_6},
+  doi       = {10.1007/978-3-540-71067-7\_6},
+  timestamp = {Tue, 14 May 2019 10:00:48 +0200},
+  biburl    = {https://dblp.org/rec/conf/tphol/SlindN08.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/popl/HuetH14,
+  author    = {G{\'{e}}rard P. Huet and
+               Hugo Herbelin},
+  editor    = {Suresh Jagannathan and
+               Peter Sewell},
+  title     = {30 years of research and development around {Coq}},
+  booktitle = {The 41st Annual {ACM} {SIGPLAN-SIGACT} Symposium on Principles of
+               Programming Languages, {POPL} '14, San Diego, CA, USA, January 20-21,
+               2014},
+  pages     = {249--250},
+  publisher = {{ACM}},
+  year      = {2014},
+  url       = {https://doi.org/10.1145/2535838.2537848},
+  doi       = {10.1145/2535838.2537848},
+  timestamp = {Thu, 24 Jun 2021 16:19:31 +0200},
+  biburl    = {https://dblp.org/rec/conf/popl/HuetH14.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/pldi/HaasRSTHGWZB17,
+  author    = {Andreas Haas and
+               Andreas Rossberg and
+               Derek L. Schuff and
+               Ben L. Titzer and
+               Michael Holman and
+               Dan Gohman and
+               Luke Wagner and
+               Alon Zakai and
+               J. F. Bastien},
+  editor    = {Albert Cohen and
+               Martin T. Vechev},
+  title     = {Bringing the web up to speed with WebAssembly},
+  booktitle = {Proceedings of the 38th {ACM} {SIGPLAN} Conference on Programming
+               Language Design and Implementation, {PLDI} 2017, Barcelona, Spain,
+               June 18-23, 2017},
+  pages     = {185--200},
+  publisher = {{ACM}},
+  year      = {2017},
+  url       = {https://doi.org/10.1145/3062341.3062363},
+  doi       = {10.1145/3062341.3062363},
+  timestamp = {Wed, 23 Jun 2021 15:34:31 +0200},
+  biburl    = {https://dblp.org/rec/conf/pldi/HaasRSTHGWZB17.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{DBLP:books/daglib/0069232,
+  author    = {Robin Milner and
+               Mads Tofte and
+               Robert Harper},
+  title     = {Definition of {Standard} {ML}},
+  publisher = {{MIT} Press},
+  year      = {1990},
+  isbn      = {978-0-262-63132-7},
+  timestamp = {Tue, 14 Mar 2017 11:56:49 +0100},
+  biburl    = {https://dblp.org/rec/books/daglib/0069232.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/jsyml/Church40,
+  author    = {Alonzo Church},
+  title     = {A Formulation of the {Simple Theory of Types}},
+  journal   = {J. Symb. Log.},
+  volume    = {5},
+  number    = {2},
+  pages     = {56--68},
+  year      = {1940},
+  url       = {https://doi.org/10.2307/2266170},
+  doi       = {10.2307/2266170},
+  timestamp = {Wed, 14 Nov 2018 10:49:18 +0100},
+  biburl    = {https://dblp.org/rec/journals/jsyml/Church40.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cade/AspertiRCT11,
+  author    = {Andrea Asperti and
+               Wilmer Ricciotti and
+               Claudio Sacerdoti Coen and
+               Enrico Tassi},
+  editor    = {Nikolaj S. Bj{\o}rner and
+               Viorica Sofronie{-}Stokkermans},
+  title     = {The {Matita} Interactive Theorem Prover},
+  booktitle = {Automated Deduction - {CADE-23} - 23rd International Conference on
+               Automated Deduction, Wroclaw, Poland, July 31 - August 5, 2011. Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {6803},
+  pages     = {64--69},
+  publisher = {Springer},
+  year      = {2011},
+  url       = {https://doi.org/10.1007/978-3-642-22438-6\_7},
+  doi       = {10.1007/978-3-642-22438-6\_7},
+  timestamp = {Thu, 14 Apr 2022 20:26:15 +0200},
+  biburl    = {https://dblp.org/rec/conf/cade/AspertiRCT11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/cade/AllenCEKL00,
+  author    = {Stuart F. Allen and
+               Robert L. Constable and
+               Richard Eaton and
+               Christoph Kreitz and
+               Lori Lorigo},
+  editor    = {David A. McAllester},
+  title     = {The {Nuprl} Open Logical Environment},
+  booktitle = {Automated Deduction - CADE-17, 17th International Conference on Automated
+               Deduction, Pittsburgh, PA, USA, June 17-20, 2000, Proceedings},
+  series    = {Lecture Notes in Computer Science},
+  volume    = {1831},
+  pages     = {170--176},
+  publisher = {Springer},
+  year      = {2000},
+  url       = {https://doi.org/10.1007/10721959\_12},
+  doi       = {10.1007/10721959\_12},
+  timestamp = {Tue, 14 May 2019 10:00:39 +0200},
+  biburl    = {https://dblp.org/rec/conf/cade/AllenCEKL00.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{10.1007/s00165-019-00492-1, author = {Paulson, Lawrence C. and Nipkow, Tobias and Wenzel, Makarius}, title = {From LCF to Isabelle/HOL}, year = {2019}, issue_date = {Dec 2019}, publisher = {Springer-Verlag}, address = {Berlin, Heidelberg}, volume = {31}, number = {6}, issn = {0934-5043}, url = {https://doi.org/10.1007/s00165-019-00492-1}, doi = {10.1007/s00165-019-00492-1}, abstract = {Interactive theorem provers have developed dramatically over the past four decades, from primitive beginnings to today’s powerful systems. Here, we focus on Isabelle/HOL and its distinctive strengths. They include automatic proof search, borrowing techniques from the world of first order theorem proving, but also the automatic search for counterexamples. They include a highly readable structured language of proofs and a unique interactive development environment for editing live proof documents. Everything rests on the foundation conceived by Robin Milner for Edinburgh LCF: a proof kernel, using abstract types to ensure soundness and eliminate the need to store proofs. Compared with the research prototypes of the 1970s, Isabelle is a practical and versatile tool. It is used by system designers, mathematicians and many others.}, journal = {Form. Asp. Comput.}, month = {dec}, pages = {675–698}, numpages = {24}, keywords = {LCF, Interactive theorem proving, HOL, Isabelle} }
